# dotaml-live

./: .gitignore  NOTES.md  README.md  VENDOR.md  budget.yaml  pyproject.toml  splits.yaml
config/: patches.yaml  pipeline.yaml  serving.yaml  training.yaml
docs/decisions/: 0001-vendor-boundary.md  0002-sealed-holdout-policy.md  0003-storage-sharing.md  0004-prequential-evaluation.md  0005-patch-awareness.md  0006-patch-detection.md  0007-hero-vocab-new-heroes.md  0008-feedback-queue.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: dotaml-live-rootCA.crt
frontend/src/: App.jsx  api.js  styles.css
registry/: live  registry.json
registry/fs-2026-06-07/: hero_combos.json  metrics.json
registry/fs-2026-06-14/: hero_combos.json  metrics.json
registry/fs-2026-06-28/: metrics.json
registry/ft-2026-06-04/: metrics.json
registry/ft-2026-06-06/: metrics.json
registry/ft-2026-06-08/: hero_combos.json  metrics.json
scripts/: bootstrap_from_snapshot.py  eval_screenshot_detector.py  fetch_hero_portraits.py  parity_check.py  post_replay.sh  precompute_combos.py  replay_history.sh  simulate_live.py  vendor_sync.sh
systemd/: dotaml-live-abilities-refresh.service  dotaml-live-abilities-refresh.timer  dotaml-live-dashboard.service  dotaml-live-retrain-weekly.service  dotaml-live-retrain-weekly.timer  dotaml-live-retrain.service  dotaml-live-retrain.timer
tests/: test_api.py  test_combo_explain.py  test_feedback_runner.py  test_feedback_store.py  test_screenshot.py  test_settings_store.py  test_training.py
(+68 files in other folders)
